# audio-instruct

./: README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  instruct.rs  llama.rs  main.rs  utils.rs  whisper.rs
src/lib/: types.ts
src/lib/audio-proc/: audio-processor.ts  worklet.d.ts
src/routes/: +page.svelte  QA.svelte
