[package]
name = "audio-instruct"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow              = "1"
candle-core         = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn           = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
hf-hub              = { version = "0" }
log                 = "0"
pretty_env_logger   = "0"
serde = { version   = "1", features = ["derive"] }
serde_json          = "1"
tauri = { version   = "2.0.0-beta", features = [] }
tauri-plugin-shell  = "2.0.0-beta"
tokenizers          = { version = "0" }